--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "LAKIYA-MD",
+  "name": "Vajira/Baileys",
   "version": "6.8.3",
   "description": "Custom Baileys WhatsApp API",
   "keywords": [
